--- a/React/20220725.md
+++ b/React/20220725.md
@@ -7,4 +7,110 @@
 - VS Code
   - VS Code Prompt Default cmd로 설정
   - Extension Live Server 설치
+- js파일 경로에 index.html 생성 후 Live Server 실행
+```html
+<body>
+    <h1>JavaScript</h1>
+    <script type="text/javascript" src="./A05SpreadOperator.js"></script>
+</body>
+```
 
+## react 시작 개발환경 설정
+- npm i로 jquery, live-server, esline 설치
+
+## 기타
+- pcakgae.json version에 ^이 붙어있으면, 주버전은 바뀌지 않음
+
+## babel init
+```
+C:\ReactJS_Mulcam\Sample\Chap01_JavaScript>npx webpack-cli init
+
+? Which of the following JS solutions do you want to use? ES6
+? Do you want to use webpack-dev-server? Yes
+? Do you want to simplify the creation of HTML files for your bundle? Yes
+? Do you want to add PWA support? No
+? Which of the following CSS solutions do you want to use? CSS only
+? Will you be using PostCSS in your project? No
+? Do you want to extract CSS for every file? Yes
+? Do you like to install prettier to format generated configuration? No
+? Pick a package manager: npm
+[webpack-cli] ℹ INFO  Initialising project...
+ conflict package.json
+? Overwrite package.json? overwrite
+    force package.json
+   create src\index.js
+   create README.md
+   create index.html
+   create webpack.config.js
+ conflict .babelrc
+? Overwrite .babelrc? overwrite
+    force .babelrc
+```
+- webpack.config.js 변경
+```
+// Generated using webpack-cli https://github.com/webpack/webpack-cli
+
+const path = require('path');
+const HtmlWebpackPlugin = require('html-webpack-plugin');
+const MiniCssExtractPlugin = require('mini-css-extract-plugin');
+
+const isProduction = process.env.NODE_ENV == 'production';
+
+
+const stylesHandler = MiniCssExtractPlugin.loader;
+
+
+
+const config = {
+    entry: './main/index.js',
+    output: {
+        path: path.resolve(__dirname, 'build'),
+    },
+    devServer: {
+        open: true,
+        host: 'localhost',
+    },
+    plugins: [
+        new HtmlWebpackPlugin({
+            template: './main/index.html',
+        }),
+
+        new MiniCssExtractPlugin(),
+
+        // Add your plugins here
+        // Learn more about plugins from https://webpack.js.org/configuration/plugins/
+    ],
+    module: {
+        rules: [
+            {
+                test: /\.(js|jsx)$/i,
+                loader: 'babel-loader',
+            },
+            {
+                test: /\.css$/i,
+                use: [stylesHandler,'css-loader'],
+            },
+            {
+                test: /\.(eot|svg|ttf|woff|woff2|png|jpg|gif)$/i,
+                type: 'asset',
+            },
+
+            // Add your rules for custom modules here
+            // Learn more about loaders from https://webpack.js.org/loaders/
+        ],
+    },
+};
+
+module.exports = () => {
+    if (isProduction) {
+        config.mode = 'production';
+        
+        
+    } else {
+        config.mode = 'development';
+    }
+    return config;
+};
+
+```
+- 실행 : npm run serve
