--- a/React/20220725.md
+++ b/React/20220725.md
@@ -16,10 +16,13 @@
 ```
 
 ## react 시작 개발환경 설정
-- npm i로 jquery, live-server, esline 설치
+- npm i로 jquery, live-server, eslint 설치
 
 ## 기타
 - pcakgae.json version에 ^이 붙어있으면, 주버전은 바뀌지 않음
+- extension
+  - ES7+ React/Redux/React-Native snippets
+  - JavaScript (ES6) code snippets
 
 ## babel init
 ```
